Fix text centering bug on iOS

--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,8 @@ body {
     font-size: 16px;
     border-radius: 30%;
     font-family: Montserrat, sans-serif;
+    font-weight: normal;
+    padding: 0%;
 }
 .create-button {
     font-size: 20px;
